adding primary and title text color

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
-body{
-    color: blue;
+:root{
+    --primary-text-color: #757575;
+    --title-text-color: #212121;
+    --accent-color: #2196F3;
+}
+
+
+body
+
+/*цвет главного текста */
+p{
+    color: var(--primary-text-color);
+}
+
+/*убираем точки*/
+    .list{
+        list-style: none;
+    }
+
+/*цвет загаловков*/
+.features-title .work-title .about-us-title .clients-title{
+    color: var(--title-text-color);
 }
