--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,12 @@ body{
 .menu-link:focus{
     color: var(--accent-color)
 }
+/* активная вкладка меню */
+.active{
+    color: var(--accent-color)  
+}
+
+
 /* меню контакты */
 .menu-contacts{
     font-weight: 500;
@@ -113,6 +119,7 @@ body{
 /*содержание чем занимаемся*/
 .work-description{
     font-weight: 700;
+    font-size: 14px;
     line-height: 1.14;
     text-align: center;
     text-transform: uppercase;
