--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,8 @@ body{
 }
 /* подзагаловки особенности */
 .features-subtitle{
-    color: var(--title-text-color);    
+    color: var(--title-text-color); 
+    font-size: 14px;   
     font-weight: 700;
     line-height: 1.14;
     text-transform: uppercase;
